tests/snapshots/parser_tests__primitives__bool_and_null.snap
---
source: tests/parser_tests.rs
expression: ast
---
Document {
    children: [
        Object {
            entries: [
                ObjectEntry {
                    key: "active",
                    key_span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 6,
                            offset: 6,
                        },
                    },
                    value: Bool {
                        value: true,
                        span: Span {
                            start: Position {
                                line: 0,
                                column: 8,
                                offset: 8,
                            },
                            end: Position {
                                line: 0,
                                column: 12,
                                offset: 12,
                            },
                        },
                    },
                },
                ObjectEntry {
                    key: "deleted",
                    key_span: Span {
                        start: Position {
                            line: 1,
                            column: 0,
                            offset: 13,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                            offset: 20,
                        },
                    },
                    value: Bool {
                        value: false,
                        span: Span {
                            start: Position {
                                line: 1,
                                column: 9,
                                offset: 22,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                                offset: 27,
                            },
                        },
                    },
                },
                ObjectEntry {
                    key: "data",
                    key_span: Span {
                        start: Position {
                            line: 2,
                            column: 0,
                            offset: 28,
                        },
                        end: Position {
                            line: 2,
                            column: 4,
                            offset: 32,
                        },
                    },
                    value: Null {
                        span: Span {
                            start: Position {
                                line: 2,
                                column: 6,
                                offset: 34,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                                offset: 38,
                            },
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 2,
                    column: 10,
                    offset: 38,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
        end: Position {
            line: 2,
            column: 10,
            offset: 38,
        },
    },
}
