tests/snapshots/parser_tests__primitives__quoted_strings.snap
---
source: tests/parser_tests.rs
expression: ast
---
Document {
    children: [
        Object {
            entries: [
                ObjectEntry {
                    key: "greeting",
                    key_span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 8,
                            offset: 8,
                        },
                    },
                    value: String {
                        value: "Hello, World!",
                        span: Span {
                            start: Position {
                                line: 0,
                                column: 10,
                                offset: 10,
                            },
                            end: Position {
                                line: 0,
                                column: 25,
                                offset: 25,
                            },
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 0,
                    column: 25,
                    offset: 25,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
        end: Position {
            line: 0,
            column: 25,
            offset: 25,
        },
    },
}
